--- a/schoolclubbackend/pom.xml
+++ b/schoolclubbackend/pom.xml
@@ -17,6 +17,14 @@
         <java.version>17</java.version>
     </properties>
 
+<!--    <repositories>-->
+<!--        <repository>-->
+<!--            <id>aliyunrepo</id>-->
+<!--            <url>-->
+<!--                http://mvnrepository.com/-->
+<!--            </url>-->
+<!--        </repository>-->
+<!--    </repositories>-->
 
     <dependencies>
         <dependency>
@@ -70,12 +78,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframwork.boot</groupId>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
-            <version>3.1.2</version>
+            <version>3.1.3</version>
         </dependency>
-
-
     </dependencies>
 
     <build>
