--- a/schoolclubbackend/src/main/resources/application.yml
+++ b/schoolclubbackend/src/main/resources/application.yml
@@ -9,3 +9,8 @@ spring:
   security:
     key: dazaoabc
     expire: 7
+  data:
+    redis:
+      url: redis://r-2zehb42aq37efq775ppd.redis.rds.aliyuncs.com:6379
+      database: 8
+      password: Asd2003828
