--- a/schoolclubfrontend/package.json
+++ b/schoolclubfrontend/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "axios": "^1.5.0",
     "element-plus": "^2.3.12",
     "vue": "^3.3.2",
     "vue-router": "^4.2.4"
