--- a/schoolclubbackend/pom.xml
+++ b/schoolclubbackend/pom.xml
@@ -83,6 +83,14 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>3.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
